--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -1,48 +1,104 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content=""width=device-width, initial-scale="1">
-        <title>Album Photo | Connexion</title>
-        <link rel="stylesheet" href="../assets/css/styles.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    </head>
-    <body>
-        <main id="signup">
-            <form action="../../backend/controllers/login.php" method="post" class="signup__form">
-                <h3>Espace de connexion</h3>
-                <!-- <input type="hidden" name="token" id="token" value="<?= $_SESSION['token'] ?>"> -->
-                <div class="signup__form__item">
-                    <label for="email">Email :</label>
-                    <input type="text" id="email" name="email" autofocus>
-                </div>
-                <div class="signup__form__item">
-                    <label for="password">Mot de passe :</label>
-                    <input type="password" id="password" name="password">
-                </div>
-                <div class="signup__form__item">
-                    <input type="submit" value="Connexion">
-                </div>
-                <div class="signup__form__reminder">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault">
-                    <label class="form-check-label" for="checkDefault">
-                        Se souvenir de moi ?
-                    </label>
-                </div>
-                <div class="signup__form__signin">
-                    <a href="./signin.html" class="btn btn-primary">Pas de compte ? S'inscrire</a>
-                </div>
-                <!-- <p class="errors"><? $error ?></p> -->
-            </form>
-        </main>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="" width="device-width," initial-scale="1" />
+    <title>Album Photo | Connexion</title>
+    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"
+      integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+  </head>
+  <body>
+    <header id="header">
+      <nav id="navbar__signup">
+        <div>
+          <a href="../../index.html" class="navbar__signup__logo">
+            <img
+              id="logo"
+              src="../../public/images/logo_album_photo.png"
+              width="50px"
+              height="50px"
+            />
+            <h1 id="title">Albopho</h1>
+          </a>
+        </div>
+      </nav>
+    </header>
+    <main id="signup">
+      <form
+        action="../../backend/controllers/login.php"
+        method="post"
+        class="signup__form"
+      >
+        <h3>Espace de connexion</h3>
+        <!-- <input type="hidden" name="token" id="token" value="<?= $_SESSION['token'] ?>"> -->
+        <div class="signup__form__item">
+          <label for="email">Email :</label>
+          <input type="text" id="email" name="email" autofocus />
+        </div>
+        <div class="signup__form__item">
+          <label for="password">Mot de passe :</label>
+          <input type="password" id="password" name="password" />
+        </div>
+        <div class="signup__form__item">
+          <input type="submit" value="Connexion" />
+        </div>
+        <div class="signup__form__reminder">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value=""
+            id="checkDefault"
+          />
+          <label class="form-check-label" for="checkDefault">
+            Se souvenir de moi ?
+          </label>
+        </div>
+        <div class="signup__form__signin">
+          <a href="./signin.html" class="btn btn-primary"
+            >Pas de compte ? S'inscrire</a
+          >
+        </div>
+        <!-- <p class="errors"><? $error ?></p> -->
+      </form>
+    </main>
+    <footer id="footer" style="background-color: white;">
+      <a
+        href="https://github.com/Lce-j/app-photo-album"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Projet de fin d'année</a
+      >
+      <a
+        href="https://linkedin.com/in/josse-lucie"
+        target="_blank"
+        rel="noopener noreferrer"
+        >&copy; Lucie Josse | 2024-2025</a
+      >
+    </footer>
+  </body>
 </html>
-
-
-
-
- 
-
