--- a/frontend/pages/signin.html
+++ b/frontend/pages/signin.html
@@ -23,7 +23,7 @@
         </header>
         <main id="signin">
             <form action="../../backend/controllers/signin.php" method="post" enctype="multipart/form-data" class="signin__form">
-                <div class="register-disp">
+                <div class="signin__register-disp">
                     <label for="last-name" class="signin__register-label">Nom</label>
                     <input type="text" placeholder="Nom" name="last-name" class="register-input">
                 </div>
@@ -39,10 +39,6 @@
                     <label for="password" class="signin__register-label">Mot de passe</label>
                     <input type="password" placeholder="Mot de passe" name="password" class="register-input">
                 </div>
-                <!-- <div class="register-disp">
-                    <label for="mdp" class="register-label">Confirmation du mot de passe</label>
-                    <input type="password" placeholder="Mot de passe" name="password" class="register-input">
-                </div> -->
                 <div class="signin__register-disp">
                     <input type="submit" class="register-submit" value ="S'enregistrer">
                 </div>
