--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@
           href="./frontend/pages/signup.html"
           target="_blank"
           rel="noopener noreferrer"
-          >Composer votre album !</a
+          >
+          <button type="button" class="btn btn-primary">Composer votre album !</button>
+          </a
         >
-        <a href="./frontend/pages/albums/show_album.php">Voir les albums !</a>
+        <a href="./frontend/pages/albums/show_album.php">
+          <button type="button" class="btn btn-primary">Voir les albums !</button>
+        </a>
       </div>
     </main>
     <footer id="footer">
