--- a/frontend/pages/albums/edit_album.html
+++ b/frontend/pages/albums/edit_album.html
@@ -75,9 +75,19 @@
         </div>
       </div>
     </main>
-    <footer id="footer">
-      <a href="http://" target="_blank" rel="noopener noreferrer">Projet de fin d'année</a>
-      <a href="http://" target="_blank" rel="noopener noreferrer">&copy; Lucie Josse | 2024-2025</a>
+    <footer id="footer" sstyle="background-color: rgb(96, 182, 235);">
+      <a
+        href="https://github.com/Lce-j/app-photo-album"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Projet de fin d'année</a
+      >
+      <a
+        href="https://linkedin.com/in/josse-lucie"
+        target="_blank"
+        rel="noopener noreferrer"
+        >&copy; Lucie Josse | 2024-2025</a
+      >
     </footer>
   </body>
 </html>
