--- a/frontend/pages/signin.html
+++ b/frontend/pages/signin.html
@@ -47,6 +47,20 @@
                 </div>
             </form>    
         </main>
+        <footer id="footer" style="background-color: white;">
+            <a
+                href="https://github.com/Lce-j/app-photo-album"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Projet de fin d'année</a
+            >
+            <a
+                href="https://linkedin.com/in/josse-lucie"
+                target="_blank"
+                rel="noopener noreferrer"
+                >&copy; Lucie Josse | 2024-2025</a
+            >
+        </footer>
     </body>
 </html>
 
